Name: Flowskell
Version: 0.0.5
Description: OpenGL livecoding enviroment (fluxus clone)
License: GPL
License-file: LICENSE
Author: Hannes Gräuler
Maintainer: hgraeule@uos.de
Build-Type: Simple
Cabal-Version: >=1.2
Data-Files: lib/*.scm

Flag JACK
  Description: Enable JACK support (requires jack bindings, darcs version)
  Default: False

Executable flowskell
  Main-is: Main.hs
  Hs-Source-Dirs: src
  Extensions: CPP
  Build-Depends: base >= 3 && < 5, containers, mtl, stm, random, array
  Build-Depends: husk-scheme, colour, time, GLUT, OpenGLRaw, GLURaw, OpenGL
  Build-Depends: transformers, explicit-exception, unix
  Ghc-Options: -O2 -threaded

  if flag(JACK)
    Ghc-Options: -O2 -threaded +RTS -N2 -RTS
    Cpp-Options: -DUSE_JACK
    Build-Depends: jack >= 0.6
