Name: Flowskell
Version: 0.0.8
Description: OpenGL livecoding enviroment (fluxus clone)
License: GPL
License-file: LICENSE
Author: Hannes Gräuler
Maintainer: hgraeule@uos.de
Build-Type: Simple
Cabal-Version: >=1.2
Data-Files: lib/*.scm

Flag JACK
  Description: Enable JACK support (experimental)
  Default: False

Flag Textures
  Description: Enable OpenGL textures (experimental)
  Default: True
  Manual: True

Flag Shaders
  Description: Enable render-to-texture, shaders, blur (experimental)
  Default: True
  Manual: True

Flag Debug
  Description: Enable debugging, make rendering pipeline more obvious
  Default: False

Executable flowskell
  Main-is: Main.hs
  Hs-Source-Dirs: src
  Extensions: CPP
  Build-Depends: base >= 3 && < 5, containers, mtl, stm, random, array
  Build-Depends: colour, time, GLUT, OpenGLRaw, GLURaw, OpenGL
  Build-Depends: husk-scheme >= 3.7
  Ghc-Options: -O2 -threaded

  if flag(JACK)
    Ghc-Options: -O2 -threaded +RTS -N2 -RTS
    Cpp-Options: -DUSE_JACK
    Build-Depends: jack >= 0.7, transformers, explicit-exception, unix

  if flag(Textures)
    Build-Depends: JuicyPixels, vector
    Cpp-Options: -DUSE_TEXTURES

  if flag(Shaders)
    Cpp-Options: -DRENDER_TO_TEXTURE

  if flag(Debug)
    Cpp-Options: -DDEBUG
